# project-code

./: .gitattributes  README.md
cxcy/code-and-data/: coco_paper.yaml  setup.ipynb
cxcy/code-and-data/dataset/: classes.txt
cxcy/code-and-data/dataset/labels/: train.cache  val.cache
cxcy/code-and-data/dataset/labels/train/: paper (1)_00.txt  paper (1)_01.txt  paper (1)_02.txt  paper (1)_03.txt  paper (1)_04.txt  paper (1)_08.txt  paper (1)_09.txt  paper (1)_10.txt  paper (1)_102.txt  paper (1)_103.txt  paper (1)_104.txt  paper (1)_105.txt  paper (1)_109.txt  paper (1)_110.txt  paper (1)_111.txt  paper (1)_112.txt  paper (1)_115.txt  paper (1)_116.txt  paper (1)_117.txt  paper (1)_118.txt  paper (1)_119.txt  paper (1)_122.txt  paper (1)_123.txt  paper (1)_124.txt  paper (1)_125.txt  paper (1)_129.txt  paper (1)_130.txt  paper (1)_131.txt  paper (1)_136.txt  paper (1)_137.txt  paper (1)_138.txt  paper (1)_139.txt  paper (1)_142.txt  paper (1)_143.txt  paper (1)_144.txt  paper (1)_145.txt  paper (1)_149.txt  paper (1)_15.txt  (+416 more)
prp/: 1.ipynb  Paths.txt  Try.ipynb  lu.ipynb  oscillator1.ipynb  test.py
prp/IsingModel/: README.md
prp/IsingModel/Ising_square_example/: CMakeLists.txt  Unittest.cpp  ising_square_dataL2.txt  ising_square_dataL3.txt  ising_square_dataL4.txt  ising_square_dataL5.txt  main.cpp
prp/IsingModel/Ising_square_example/Photo/: The_photo.opju
prp/IsingModel/Ising_square_example/include/: IsingSquare.hpp  IsingSystem.hpp
prp/IsingModel/monte/: cubiclattice.hpp  kagomelattice.hpp  main.cpp  montekarlo.hpp  preparation.hpp  squarelattice.hpp
(+295 files in other folders)
